# agent-product-generator

./: .env.example  .gitignore  Procfile  README.md  main.py  pyproject.toml  requirements.txt  start.ps1  start.sh
.claude/: settings.local.json
.streamlit/: secret-google.json
agent-product-generator/: __main__.py
backend/: __main__.py  config.py  logging_config.py  main.py
backend/agent/: edges.py  graph.py  nodes.py  state.py
backend/agent/tools/: __init__.py  description_generator.py  feature_extractor.py  localization.py  seo_extractor.py  structured_formatter.py  tone_adapter.py  web_scraper.py
backend/api/routes/: export.py  generate.py  health.py
backend/models/: product_sheet.py  requests.py  responses.py
backend/services/: export_service.py  llm_factory.py
frontend/: app.py
frontend/components/: agent_trace.py  export_panel.py  input_form.py  sheet_preview.py
frontend/pages/: 01_generate.py  02_history.py  03_about.py
frontend/utils/: api_client.py  session_state.py
tests/: conftest.py
tests/test_agent/: test_tools.py
tests/test_api/: test_routes.py
